--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# proj local db
+dbdata/
+
 # Reference https://github.com/github/gitignore/blob/master/Go.gitignore
 # Binaries for programs and plugins
 *.exe
