--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -8,8 +8,12 @@ server:
 data:
   database:
     driver: mysql
-    source: root:root@tcp(127.0.0.1:3306)/test
+    source: root:root@tcp(127.0.0.1:3306)/test?charset=utf8mb4&parseTime=True&loc=Local
   redis:
     addr: 127.0.0.1:6379
     read_timeout: 0.2s
     write_timeout: 0.2s
+#Auth
+auth:
+  jwt_secret: "secret"
+  expire_duration: 3600s
