--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -11,6 +11,7 @@ data:
     source: root:root@tcp(127.0.0.1:3306)/test?charset=utf8mb4&parseTime=True&loc=Local
   redis:
     addr: 127.0.0.1:6379
+    dial_timeout: 1s
     read_timeout: 0.2s
     write_timeout: 0.2s
 #Auth
