--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # proj local db
 dbdata/
+consuldata/
 
 # Reference https://github.com/github/gitignore/blob/master/Go.gitignore
 # Binaries for programs and plugins
