--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # proj local db
 dbdata/
+
+# proj local registry
+
 consuldata/
+
 
 # Reference https://github.com/github/gitignore/blob/master/Go.gitignore
 # Binaries for programs and plugins
