finished app/account/service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "Accountmail",
         "bookkeepingo",
-        "Kratos"
+        "Kratos",
+        "opentelemetry",
+        "otel"
     ]
 }
