--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
     "cSpell.words": [
         "Accountmail",
         "bookkeepingo",
+        "flagconf",
         "Kratos",
+        "ldflags",
         "opentelemetry",
-        "otel"
+        "otel",
+        "Schemaless"
     ]
 }
